# iterchunk

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
dchunk/: __init__.py  chunking.py  tests.py
src/iterchunk/: __init__.py  chunking.py
src/iterchunk/tests/: chuncking_test.py
