[tool.poetry]
name = "iterchunk"
version = "0.0.2dev0"
description = "Split an iterable into chunks in Python."
authors = ["Ian Lin <you@example.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ianlini/iterchunk"
homepage = "https://github.com/ianlini/iterchunk"
classifiers = [
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7"
tox = "^3.14"
coverage = "^4.5"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
